contact form added

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andre Entrekin</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
-    <link rel="stylesheet" href="style.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-    <nav class="nav-bar"></nav>
+    <!-- <nav class="nav-bar"></nav> -->
 
     <div class="first">
         <div class="heading">Andre Entrekin</div>
@@ -37,9 +41,8 @@
 
     </div>
     <div class="two">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea velit explicabo accusamus asperiores facilis
-            vero molestias, reiciendis at harum, cumque expedita, voluptas quasi alias voluptate! Eos omnis illo
-            neque doloremque!</p>
+        <p>In addition to being able to create beautiful websites, I am also well versed in design tools such as
+            Photoshop, SketchUp, and Publisher.</p>
     </div>
     <div class="third">
 
@@ -64,22 +67,47 @@
         </div>
     </div>
     <div class="three">
-
         <div class="two-col">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea velit explicabo accusamus asperiores facilis
-                vero molestias, reiciendis at harum, cumque expedita, voluptas quasi alias voluptate! Eos omnis illo
-                neque doloremque!</p>
-        </div>
-        <div class="two-col">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea velit explicabo accusamus asperiores facilis
-                vero molestias, reiciendis at harum, cumque expedita, voluptas quasi alias voluptate! Eos omnis illo
-                neque doloremque!</p>
+            <p>Please contact me to learn more about my skills and experience and how they can benefit you on your next
+                project.</p>
         </div>
         <div class="forth">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque enim quo blanditiis recusandae obcaecati
-                velit aliquam quis veritatis debitis, vero, ex eius commodi cupiditate magnam exercitationem expedita
-                ipsam beatae. Suscipit.</p>
-            <!-- <footer>@copyright 2020 Andre Entrekin</footer> -->
+            <h3 class="heading3">Contact</h3>
+            <div class="contact">
+                <div class="row">
+                    <div class="col m5 s12">
+                        <div class="info-container">
+                            <div class="info">
+                                <br>
+                                Andre Entrekin
+                            </div>
+                            <div class="email">
+                                andre.entrekin@gmail.com
+                            </div>
+                        </div>
+                    </div>
+                    <form class="col m6 s12">
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <input id="first_name" type="text" class="validate">
+                                <label for="name">Name</label>
+                            </div>
+                            <div class="input-field col s6">
+                                <input id="email" type="email" class="validate">
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <textarea id="message" class="materialize-textarea"></textarea>
+                                    <label for="message">Message</label>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+
+            </div>
         </div>
     </div>
 
