--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
     </section>
     <div class="second">
         <h1 class="projects">Projects</h1>
+        <div class="flex-container">
+            <div class="sites">
+                <img class="project-photos" src="./assets/photos/Project1.png" alt="travel site"><br>
+                <a href="https://github.com/AndreTheTallGuy/Project-1" target="_blank">GitHub</a> | <a
+                    href="https://andrethetallguy.github.io/Project-1/" target="_blank">Link</a>
+            </div>
+            <div class="sites">
+                <img class="project-photos" src="./assets/photos/weather.png" alt="weather app"><br>
+                <a href="https://github.com/AndreTheTallGuy/homework6" target="_blank">GitHub</a> | <a
+                    href="https://andrethetallguy.github.io/homework6" target="_blank">Link</a>
+            </div>
+            <div class="sites">
+                <img class="project-photos" src="./assets/photos/scheduler.png" alt="scheduler"><br>
+                <a href="https://github.com/AndreTheTallGuy/homework5" target="_blank">GitHub</a> | <a
+                    href="https://andrethetallguy.github.io/homework5" target="_blank">Link</a>
+            </div>
+            <div class="sites">
+                <img class="project-photos" src="./assets/photos/quiz.png" alt="quiz app"><br>
+                <a href="https://github.com/AndreTheTallGuy/homework4" target="_blank">GitHub</a> | <a
+                    href="https://andrethetallguy.github.io/homework4" target="_blank">Link</a>
+            </div>
+        </div>
+
 
     </div>
     <div class="two">
@@ -105,13 +128,11 @@
                         </div>
                     </form>
                 </div>
-
-
             </div>
         </div>
     </div>
 
-    <div class="somethin">lakjsdf</div>
+    <footer> Copyright Andre Entrekin 2020</footer>
 </body>
 
 </html>
