--- a/index.html
+++ b/index.html
@@ -37,17 +37,24 @@
         </div>
     </section>
     <div class="second">
-        <h1 class="projects">Projects</h1>
+        <h2 class="projects">Projects</h2>
         <div class="flex-container">
             <div class="sites">
                 <img class="project-photos" src="./assets/photos/Project1.png" alt="travel site"><br>
-                <a href="https://github.com/AndreTheTallGuy/Project-1" target="_blank">GitHub</a> | <a
-                    href="https://andrethetallguy.github.io/Project-1/" target="_blank">Link</a>
+                <div class="links">
+                    <a href="https://github.com/AndreTheTallGuy/Project-1" target="_blank">GitHub</a> | <a
+                        href="https://andrethetallguy.github.io/Project-1/" target="_blank">Link</a>
+
+                </div>
+
             </div>
             <div class="sites">
                 <img class="project-photos" src="./assets/photos/weather.png" alt="weather app"><br>
-                <a href="https://github.com/AndreTheTallGuy/homework6" target="_blank">GitHub</a> | <a
-                    href="https://andrethetallguy.github.io/homework6" target="_blank">Link</a>
+                <div class="links">
+                    <a href="https://github.com/AndreTheTallGuy/homework6" target="_blank">GitHub</a> | <a
+                        href="https://andrethetallguy.github.io/homework6" target="_blank">Link</a>
+
+                </div>
             </div>
             <div class="sites">
                 <img class="project-photos" src="./assets/photos/scheduler.png" alt="scheduler"><br>
