--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
     </div>
     <div class="three">
         <div class="two-col">
-            <p>Please contact me to learn more about my skills and experience and how they can benefit you on your next
+            <p>Please contact me to learn more about my skills and experience and how they can benefit you on your
+                next
                 project.</p>
         </div>
         <div class="forth">
-            <h3 class="heading3">Contact</h3>
+            <h3 class="heading3 contact-word">Contact</h3>
             <div class="contact">
                 <div class="row">
                     <div class="col m5 s12">
@@ -111,13 +112,21 @@
                                 <br>
                                 Andre Entrekin
                             </div>
-                            <div class="email">
+                            <div class="my-email">
                                 andre.entrekin@gmail.com
+                            </div>
+                            <div class="media">
+                                <a href="https://github.com/AndreTheTallGuy" target="_blank"><i
+                                        class="fab fa-github-square"></i></a>
+                                <a href="https://www.instagram.com/andrethetallguy/" target="_blank"><i
+                                        class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/andreentrekin/" target="_blank"><i
+                                        class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
                     <form class="col m6 s12">
-                        <div class="row">
+                        <div class="row contact-info">
                             <div class="input-field col s6">
                                 <input id="first_name" type="text" class="validate">
                                 <label for="name">Name</label>
