--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 fact coupled with my love of computers has swiftly brought me into the world of coding through a
                 bootcamp for fullstack development
                 with Northwestern University. I am quickly gaining proficiency with HTML, CSS, Javascript/Jquery, and
-                Node.js. </p>
+                Node.js. I also have some experience with WordPress. </p>
         </div>
     </section>
     <div class="second">
         <h2 class="projects">Projects</h2>
         <div class="flex-container">
             <div class="sites">
-                <img class="project-photos" src="./assets/photos/Project1.png" alt="travel site"><br>
+                <img class="project-photos" src="./assets/photos/Close2You.png" alt="travel site"><br>
                 <div class="links">
                     <a href="https://github.com/AndreTheTallGuy/Project-1" target="_blank">GitHub</a> | <a
                         href="https://andrethetallguy.github.io/Project-1/" target="_blank">Link</a>
@@ -113,7 +113,7 @@
                                 Andre Entrekin
                             </div>
                             <div class="my-email">
-                                andre.entrekin@gmail.com
+                                <a href="mailto:andre.entrekin@gmail.com">andre.entrekin@gmail.com</a>
                             </div>
                             <div class="media">
                                 <a href="https://github.com/AndreTheTallGuy" target="_blank"><i
