--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 Andre Entrekin
                             </div>
                             <div class="my-email">
-                                <a href="mailto:andre.entrekin@gmail.com">andre.entrekin@gmail.com</a>
+                                <a href="mailto:andre.entrekin@gmail.com" target="_blank">andre.entrekin@gmail.com</a>
                             </div>
                             <div class="media">
                                 <a href="https://github.com/AndreTheTallGuy" target="_blank"><i
