--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 
     <div class="first">
         <div class="heading">Andre Entrekin</div>
-        <div class="subheading">Coder | Photographer | Educator</div>
+        <div class="subheading">
+            <div class="coder">Coder</div>
+            <div class="other">
+                <span>| Photographer | Educator</span>
+            </div>
+        </div>
+
     </div>
 
     <section class="one">
@@ -42,7 +48,8 @@
             <div class="sites">
                 <img class="project-photos" src="./assets/photos/Close2You.png" alt="travel site"><br>
                 <div class="links">
-                    <a href="https://github.com/AndreTheTallGuy/Project-1" target="_blank">GitHub</a> | <a
+                    <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Project-1"
+                        target="_blank">GitHub</a> | <a class="projectLinks"
                         href="https://andrethetallguy.github.io/Project-1/" target="_blank">Link</a>
 
                 </div>
@@ -51,20 +58,27 @@
             <div class="sites">
                 <img class="project-photos" src="./assets/photos/weather.png" alt="weather app"><br>
                 <div class="links">
-                    <a href="https://github.com/AndreTheTallGuy/homework6" target="_blank">GitHub</a> | <a
-                        href="https://andrethetallguy.github.io/homework6" target="_blank">Link</a>
+                    <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Homework6"
+                        target="_blank">GitHub</a> | <a class="projectLinks"
+                        href="https://andrethetallguy.github.io/Homework6" target="_blank">Link</a>
 
                 </div>
             </div>
             <div class="sites">
                 <img class="project-photos" src="./assets/photos/scheduler.png" alt="scheduler"><br>
-                <a href="https://github.com/AndreTheTallGuy/homework5" target="_blank">GitHub</a> | <a
-                    href="https://andrethetallguy.github.io/homework5" target="_blank">Link</a>
+                <div class="links">
+                    <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Homework5"
+                        target="_blank">GitHub</a> | <a class="projectLinks"
+                        href="https://andrethetallguy.github.io/Homework5" target="_blank">Link</a>
+                </div>
             </div>
             <div class="sites">
                 <img class="project-photos" src="./assets/photos/quiz.png" alt="quiz app"><br>
-                <a href="https://github.com/AndreTheTallGuy/homework4" target="_blank">GitHub</a> | <a
-                    href="https://andrethetallguy.github.io/homework4" target="_blank">Link</a>
+                <div class="links">
+                    <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Homework4"
+                        target="_blank">GitHub</a> | <a class="projectLinks"
+                        href="https://andrethetallguy.github.io/Homework4" target="_blank">Link</a>
+                </div>
             </div>
         </div>
 
