css changes and working from new clone

--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,9 @@
                 has taken me to some amazing places such as working at an elephant sanctuary in Thailand, teaching
                 English in France and Chile, and even working as a raptor handler. Most recently this drive has brought
                 me into a coding bootcamp through Northwestern University. In this fast paced course I have worked to
-                excel at each and every assignment to quickly become proficient in the materials presented. I am quickly
+                excel at each and every assignment to master the materials presented. I am quickly
                 gaining proficiency with HTML, CSS, Javascript/Jquery, Node.js, MySQL, MongoDB, and React. I also have
-                some prior experience with WordPress. In addition to learning languages and libraries, I have worked to
-                develop and maintain software programs and to make improvements that enhance functionality. I've
+                some prior experience with WordPress. In addition to learning languages and libraries, I've
                 developed the skills to modify existing software, debug code, and adapt to new technologies. I am now
                 enthusiastically searching for my first job as a junior developer where I can utilize all of these
                 skills and learn some new ones as well.
@@ -180,7 +179,7 @@
                     <form class="col m6 s12">
                         <div class="row contact-info">
                             <div class="input-field col s6">
-                                <input id="first_name" type="text" class="validate">
+                                <input id="name" type="text" class="validate">
                                 <label for="name">Name</label>
                             </div>
                             <div class="input-field col s6">
@@ -190,7 +189,7 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                     <textarea id="message" class="materialize-textarea"></textarea>
-                                    <label for="message">Message</label>
+                                    <label id="messageWord" for="message">Message</label>
                                 </div>
                             </div>
                         </div>
