--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,24 @@
             </div>
             <div class="sites">
                 <figure class="snip1273 project-photos">
+                    <img src="./assets/photos/Dream Garage.png" alt="garage site image" />
+                    <figcaption>
+                        <h6>Dream Garage</h6>
+                        <p>A three person project using Github to create a website allowing the user to create a garage
+                            of their favorite cars. Car info is pulled from an API and selected cars are stored in a
+                            database. Cars are then pulled from the database based on the UUID placed in Local Storage.
+                        </p>
+                    </figcaption>
+                    <a href="http://limitless-sands-05500.herokuapp.com/" target="_blank"></a>
+                </figure>
+                <div class="links">
+                    <a class="projectLinks" href="http://limitless-sands-05500.herokuapp.com/"
+                        target="_blank">GitHub</a> | <a class="projectLinks"
+                        href="https://github.com/peterkrumb/My-Garage" target="_blank">Link</a>
+                </div>
+            </div>
+            <div class="sites">
+                <figure class="snip1273 project-photos">
                     <img src="./assets/photos/weather.png" alt="weather site image" />
                     <figcaption>
                         <h6>Weather App</h6>
