--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,8 @@
                     <figcaption>
                         <h6>Dream Garage</h6>
                         <p>A three person project using Github to create a website allowing the user to create a garage
-                            of their favorite cars. Car info is pulled from an API and selected cars are stored in a
+                            of their favorite cars. Car info is pulled from an API and user selected cars are stored in
+                            a
                             database. Cars are then pulled from the database based on the UUID placed in Local Storage.
                         </p>
                     </figcaption>
