--- a/public/index.html
+++ b/public/index.html
@@ -158,14 +158,14 @@
               </p>
             </figcaption>
             <a
-              href="https://andrethetallguy.github.io/Homework6/"
+              href="https://andrethetallguy.github.io/WeatherApp/"
               target="_blank"
             ></a>
           </figure>
           <div class="links">
             <a
               class="projectLinks"
-              href="https://github.com/AndreTheTallGuy/Homework6"
+              href="https://github.com/AndreTheTallGuy/WeatherApp"
               target="_blank"
               >GitHub</a
             >
