animal quiz links

--- a/public/index.html
+++ b/public/index.html
@@ -167,12 +167,12 @@
               scores.
             </p>
           </figcaption>
-          <a href="https://andrethetallguy.github.io/Homework4/" target="_blank"></a>
+          <a href="https://andrethetallguy.github.io/Animal-Quiz/" target="_blank"></a>
         </figure>
         <div class="links">
-          <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Homework4" target="_blank">GitHub</a>
+          <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Animal-Quiz" target="_blank">GitHub</a>
           |
-          <a class="projectLinks" href="https://andrethetallguy.github.io/Homework4" target="_blank">Link</a>
+          <a class="projectLinks" href="https://andrethetallguy.github.io/Animal-Quiz/" target="_blank">Link</a>
         </div>
       </div>
     </div>
