--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,12 @@
         Most recently this drive has brought me into a coding bootcamp through
         Northwestern University. In this fast paced course I have worked to
         excel at each and every assignment to master the materials presented.
-        I am quickly gaining proficiency with HTML, CSS, Javascript/Jquery,
-        Node.js, MySQL, MongoDB, and React. I also have some prior experience
-        with WordPress. In addition to learning languages and libraries, I've
+        I am quickly gaining proficiency with HTML, CSS, Javascript/Jquery, React, Node.js, MySQL, MongoDB, etc. I also
+        have some prior experience
+        with WordPress. In addition to learning languages and frameworks, I've
         developed the skills to modify existing software, debug code, and
         adapt to new technologies. I am now enthusiastically searching for my
-        first job as a junior developer where I can utilize all of these
+        first job as a developer where I can utilize all of these
         skills and learn some new ones as well.
       </p>
     </div>
