--- a/public/index.html
+++ b/public/index.html
@@ -65,12 +65,12 @@
               over five chapters of adventure.
             </p>
           </figcaption>
-          <a href="https://lit-woodland-52997.herokuapp.com/" target="_blank"></a>
+          <a href="https://thawing-cliffs-03966.herokuapp.com/" target="_blank"></a>
         </figure>
         <div class="links">
           <a class="projectLinks" href="https://github.com/AndreTheTallGuy/KnightFall" target="_blank">GitHub</a>
           |
-          <a class="projectLinks" href="https://lit-woodland-52997.herokuapp.com/" target="_blank">Link</a>
+          <a class="projectLinks" href="https://thawing-cliffs-03966.herokuapp.com/" target="_blank">Link</a>
         </div>
       </div>
       <div class="sites">
@@ -111,9 +111,9 @@
           <a href="http://limitless-sands-05500.herokuapp.com/" target="_blank"></a>
         </figure>
         <div class="links">
-          <a class="projectLinks" href="http://limitless-sands-05500.herokuapp.com/" target="_blank">GitHub</a>
+          <a class="projectLinks" href="https://github.com/peterkrumb/My-Garage" target="_blank">GitHub</a>
           |
-          <a class="projectLinks" href="https://github.com/peterkrumb/My-Garage" target="_blank">Link</a>
+          <a class="projectLinks" href="http://limitless-sands-05500.herokuapp.com/" target="_blank">Link</a>
         </div>
       </div>
       <div class="sites">
@@ -133,7 +133,7 @@
         <div class="links">
           <a class="projectLinks" href="https://github.com/AndreTheTallGuy/WeatherApp" target="_blank">GitHub</a>
           |
-          <a class="projectLinks" href="https://andrethetallguy.github.io/Homework6" target="_blank">Link</a>
+          <a class="projectLinks" href="https://andrethetallguy.github.io/WeatherApp/" target="_blank">Link</a>
         </div>
       </div>
       <div class="sites">
@@ -147,12 +147,12 @@
               save user tasks and the DOM to keep track of time.
             </p>
           </figcaption>
-          <a href="https://andrethetallguy.github.io/Homework5/" target="_blank"></a>
+          <a href="https://andrethetallguy.github.io/Animal-Quiz/" target="_blank"></a>
         </figure>
         <div class="links">
-          <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Homework5" target="_blank">GitHub</a>
+          <a class="projectLinks" href="https://github.com/AndreTheTallGuy/Animal-Quiz" target="_blank">GitHub</a>
           |
-          <a class="projectLinks" href="https://andrethetallguy.github.io/Homework5" target="_blank">Link</a>
+          <a class="projectLinks" href="https://andrethetallguy.github.io/Animal-Quiz/" target="_blank">Link</a>
         </div>
       </div>
       <div class="sites">
