--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
         first job as a developer where I can utilize all of these
         skills and learn some new ones as well.
       </p>
+      <a href="/resume" class="pdf" target="_blank">Resume</a>
     </div>
   </section>
   <div class="second">
@@ -206,7 +207,7 @@
   <div class="three">
     <div class="two-col">
       <p data-aos="fade-up" data-aos-duration="1000">
-        Please contact me to learn more about my skills and experience and how
+        Please contact me to learn more about my skills/experience and how
         they can benefit you on your next project.
       </p>
     </div>
