--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
         have some prior experience
         with WordPress. In addition to learning languages and frameworks, I've
         developed the skills to modify existing software, debug code, and
-        adapt to new technologies. I am now enthusiastically searching for my
-        first job as a developer where I can utilize all of these
+        adapt to new technologies. I am now enthusiastically searching for a job as a developer where I can utilize all
+        of these
         skills and learn some new ones as well.
       </p>
       <a href="/resume" class="pdf" target="_blank">Resume</a>
