--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
               </div>
             </div>
           </div>
-          <form action="/contact" id="contact-form" method="post" role="form" class="col m6 s12">
+          <form action="/contact" id="contact-form" method="POST" role="form" class="col m6 s12">
             <div class="row contact-info">
               <div class="input-field col s6">
                 <input id="name" type="text" class="validate" required />
