--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,42 @@
               data-aos="flip-down"
               data-aos-easing="ease-out-cubic"
               data-aos-duration="1000"
+              src="./assets/photos/Kelp.jpg"
+              alt="Aquarium Review Site"
+            />
+            <figcaption>
+              <h6>Kelp</h6>
+              <p>
+                The ultimate aquarium review site built with a MERN (Mongoose,
+                Express, React, Node) stack including Redux for state
+                management. This site also uses express validator for
+                authentication and some parallax effects for design.
+              </p>
+            </figcaption>
+            <a href="https://kelpwanted.herokuapp.com/" target="_blank"></a>
+          </figure>
+          <div class="links">
+            <a
+              class="projectLinks"
+              href="https://github.com/AndreTheTallGuy/Kelp"
+              target="_blank"
+              >GitHub</a
+            >
+            |
+            <a
+              class="projectLinks"
+              href="https://kelpwanted.herokuapp.com/"
+              target="_blank"
+              >Link</a
+            >
+          </div>
+        </div>
+        <div class="sites">
+          <figure class="snip1273 project-photos">
+            <img
+              data-aos="flip-down"
+              data-aos-easing="ease-out-cubic"
+              data-aos-duration="1000"
               src="./assets/photos/KnightFall.png"
               alt="Medieval RPG Site"
             />
@@ -384,7 +420,9 @@
                       required
                     ></textarea>
                     <label id="messageWord" for="message">Message</label>
-                    <!-- <button class="submit" type="submit">Submit</button> -->
+                    <button class="submit" type="submit" value="send">
+                      Submit
+                    </button>
                   </div>
                 </div>
                 <div class="row"></div>
