--- a/public/index.html
+++ b/public/index.html
@@ -433,9 +433,9 @@
                       required
                     ></textarea>
                     <label id="messageWord" for="message">Message</label>
-                    <button class="submit" type="submit" value="send">
+                    <!-- <button class="submit" type="submit" value="send">
                       Submit
-                    </button>
+                    </button> -->
                   </div>
                 </div>
                 <div class="row"></div>
