--- a/public/index.html
+++ b/public/index.html
@@ -110,9 +110,7 @@
               class="projectLinks"
               href="https://github.com/AndreTheTallGuy/HowlingWolfeFE"
               target="_blank"
-              >GitHub</a
-            >
-            |
+              >GitHub</a>|
             <a
               class="projectLinks"
               href="https://howlingwolfe.com/"
