--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Andre Entrekin</title>
+    <title>Ayla Entrekin</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -77,7 +77,7 @@
             <i class="fa-regular fa-envelope"></i></a>
           <a href="https://github.com/AndreTheTallGuy" target="_blank">
             <i class="fab fa-github-square"></i></a>
-          <a href="https://www.instagram.com/andrethetallguy/"
+          <a href="https://www.instagram.com/ayla.r.winters/"
             target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/andreentrekin/"
             target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -281,7 +281,7 @@
                     ><i class="fab fa-github-square"></i
                   ></a>
                   <a
-                    href="https://www.instagram.com/andrethetallguy/"
+                    href="https://www.instagram.com/ayla.r.winters/"
                     target="_blank"
                     ><i class="fab fa-instagram"></i
                   ></a>
@@ -317,7 +317,7 @@
                       required
                     ></textarea>
                     <label id="messageWord" for="message">Message</label>
-                    <a href="mailto:andre.entrekin@gmail.com" target="_blank">Submit</a>
+                    <a href="mailto:ayla.entrekin@gmail.com" target="_blank">Submit</a>
                     <!-- <button class="submit" type="submit" value="submit">
                       Submit
                     </button> -->
