updated email address

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
           pretty quickly. 
         </p>
         <div class="media">
-          <a href="mailto:ayla.entrekin@gmail.com" target="_blank">
+          <a href="mailto:ayla@aylawinters.com" target="_blank">
             <i class="fa-regular fa-envelope"></i></a>
           <a href="https://github.com/AndreTheTallGuy" target="_blank">
             <i class="fab fa-github-square"></i></a>
@@ -272,8 +272,8 @@
                   Ayla Entrekin
                 </div>
                 <div class="my-email">
-                  <a href="mailto:ayla.entrekin@gmail.com" target="_blank"
-                    >ayla.entrekin@gmail.com</a
+                  <a href="mailto:ayla@aylawinters.com" target="_blank"
+                    >ayla@aylawinters.com</a
                   >
                 </div>
                 <div class="media">
@@ -317,7 +317,7 @@
                       required
                     ></textarea>
                     <label id="messageWord" for="message">Message</label>
-                    <a href="mailto:ayla.entrekin@gmail.com" target="_blank">Submit</a>
+                    <a href="mailto:ayla@aylawinters.com" target="_blank">Submit</a>
                     <!-- <button class="submit" type="submit" value="submit">
                       Submit
                     </button> -->
