--- a/public/resume.html
+++ b/public/resume.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andre Entrekin Resume</title>
+    <title>Ayla Winter's Resume</title>
 </head>
 
 <body>
