--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,11 @@
         <div class="media">
           <a href="mailto:ayla@aylaentrekin.com" target="_blank">
             <i class="fa-regular fa-envelope"></i></a>
-          <a href="https://github.com/AndreTheTallGuy" target="_blank">
+          <a href="https://github.com/AylaWinters" target="_blank">
             <i class="fab fa-github-square"></i></a>
           <a href="https://www.instagram.com/ayla.r.winters/"
             target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/andreentrekin/"
+          <a href="https://www.linkedin.com/in/aylaentrekin/"
             target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
@@ -107,7 +107,7 @@
           <div class="links">
             <a
               class="projectLinks"
-              href="https://github.com/AndreTheTallGuy/HowlingWolfeFE"
+              href="https://github.com/AylaWinters/HowlingWolfeFE"
               target="_blank"
               >GitHub</a> |
             <a
@@ -172,7 +172,7 @@
           <div class="links">
             <a
               class="projectLinks"
-              href="https://github.com/AndreTheTallGuy/Kelp"
+              href="https://github.com/AylaWinters/Kelp"
               target="_blank"
               >GitHub</a
             >
@@ -212,7 +212,7 @@
           <div class="links">
             <a
               class="projectLinks"
-              href="https://github.com/AndreTheTallGuy/KnightFall"
+              href="https://github.com/AylaWinters/KnightFall"
               target="_blank"
               >GitHub</a
             >
@@ -276,7 +276,7 @@
                   >
                 </div>
                 <div class="media">
-                  <a href="https://github.com/AndreTheTallGuy" target="_blank"
+                  <a href="https://github.com/AylaWinters" target="_blank"
                     ><i class="fab fa-github-square"></i
                   ></a>
                   <a
@@ -285,7 +285,7 @@
                     ><i class="fab fa-instagram"></i
                   ></a>
                   <a
-                    href="https://www.linkedin.com/in/andreentrekin/"
+                    href="https://www.linkedin.com/in/aylaentrekin/"
                     target="_blank"
                     ><i class="fab fa-linkedin"></i
                   ></a>
