--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://kit.fontawesome.com/ba01d065f2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/ba01d065f2.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-169233858-1"
@@ -54,32 +57,55 @@
       <h1 data-aos="fade-up" data-aos-duration="2000">About Me</h1>
       <div class="about" data-aos="fade-up" data-aos-duration="2000">
         <p>
-          As a lifelong learner, I have consistently pushed myself to explore
-          and discover new things. This drive has taken me to some amazing
-          places such as working at an elephant sanctuary in Thailand, teaching
-          English in France and Chile, and even working as a raptor handler.
-          This drive brought me into a coding bootcamp through
-          Northwestern University followed by another such program with Revature.
+          Hi, I'm Ayla Entrekin, a software developer with a passion for
+          building seamless and efficient software solutions. Currently, I am
+          contributing my skills and knowledge at Cognizant Technology
+          Solutions, where I engage in diverse projects with our client Dun and
+          Bradstreet.
         </p>
         <p>
-          Since then, I have been working with two massive international companies,
-          <span class="bold">Cognizant</span> and <span class="bold">Dun & Bradstreet</span>. In addition to that, I have been working
-          as the sole developer at a startup called <span class="bold">HowlingWolfe Canoe and Kayak</span>.  
+          With expertise in technologies such as Java/Spring Boot, Angular 11+,
+          JavaScript, Python, AWS, GCP, Docker, and Terraform, I take pride in
+          developing applications that meet the evolving needs of businesses and
+          users alike. My experience includes improving existing codebases to
+          enhance functionality and performance, writing applications from
+          scratch to meet specific needs, integrating third-party platforms like
+          Salesforce, xMatters, ServiceNow, Five9, etc., as well as playing a
+          pivotal role in migrating from AWS to GCP.
         </p>
         <p>
-          I am a fullstack developer with a passion for the front end. Most of my experience
-          is with Angular and Java, however I love learning new technologies and pick things up 
-          pretty quickly. 
+          I hold certifications as an AWS Cloud Practitioner from Amazon Web
+          Services, and as an Angular Developer from Angular Training in
+          addition to completing Full Stack Coding Bootcamps in both
+          Angular/Java and React/Node. , I have also completed various internal
+          coursework and training programs to continually expand my skillset and
+          stay abreast of the latest industry trends and technologies.
+        </p>
+        <p>
+          Outside of my primary role, I proudly serve as the lead developer for
+          Howling Wolfe Canoe and Kayak, a burgeoning startup. In this capacity,
+          I single-handedly engineered a comprehensive full-stack web
+          application, meticulously crafting a customer and admin portal
+          deployed across various environments to meet the unique needs of the
+          business.
+        </p>
+        <p>
+          Let's connect! I'm always open to discussing new opportunities,
+          sharing insights, or collaborating on exciting projects.
         </p>
         <div class="media">
           <a href="mailto:ayla@aylaentrekin.com" target="_blank">
-            <i class="fa-regular fa-envelope"></i></a>
+            <i class="fa-regular fa-envelope"></i
+          ></a>
           <a href="https://github.com/AylaWinters" target="_blank">
-            <i class="fab fa-github-square"></i></a>
-          <a href="https://www.instagram.com/ayla.r.winters/"
-            target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/aylaentrekin/"
-            target="_blank"><i class="fab fa-linkedin"></i></a>
+            <i class="fab fa-github-square"></i
+          ></a>
+          <a href="https://www.instagram.com/ayla.r.winters/" target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/aylaentrekin/" target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </div>
       </div>
     </section>
@@ -88,7 +114,7 @@
       <div class="flex-container">
         <div class="sites">
           <figure class="snip1273 project-photos">
-            <img 
+            <img
               class="site-images"
               data-aos="flip-down"
               data-aos-easing="ease-out-cubic"
@@ -99,7 +125,9 @@
             <figcaption>
               <h6>HowlingWolfe Canoe and Kayak</h6>
               <p>
-                Spring Boot / Angular application to allow customers to make reservations for canoe and kayak rentals, with a robust admin page for managing reservations, coupons, giftcards and more!
+                Spring Boot / Angular application to allow customers to make
+                reservations for canoe and kayak rentals, with a robust admin
+                page for managing reservations, coupons, giftcards and more!
               </p>
             </figcaption>
             <a href="https://www.howlingwolfe.com/" target="_blank"></a>
@@ -109,7 +137,9 @@
               class="projectLinks"
               href="https://github.com/AylaWinters/HowlingWolfeFE"
               target="_blank"
-              >GitHub</a> |
+              >GitHub</a
+            >
+            |
             <a
               class="projectLinks"
               href="https://howlingwolfe.com/"
@@ -120,7 +150,7 @@
         </div>
         <div class="sites">
           <figure class="snip1273 project-photos">
-            <img 
+            <img
               class="site-images"
               data-aos="flip-down"
               data-aos-easing="ease-out-cubic"
@@ -137,7 +167,10 @@
                 authentication and some parallax effects for design.
               </p>
             </figcaption>
-            <a href="https://service.dnb.com/home?TAB_ID=TAB_02" target="_blank"></a>
+            <a
+              href="https://service.dnb.com/home?TAB_ID=TAB_02"
+              target="_blank"
+            ></a>
           </figure>
           <div class="links center">
             <a
@@ -150,7 +183,7 @@
         </div>
         <div class="sites">
           <figure class="snip1273 project-photos">
-            <img 
+            <img
               class="site-images"
               data-aos="flip-down"
               data-aos-easing="ease-out-cubic"
@@ -187,7 +220,7 @@
         </div>
         <div class="sites">
           <figure class="snip1273 project-photos">
-            <img 
+            <img
               class="site-images"
               data-aos="flip-down"
               data-aos-easing="ease-out-cubic"
@@ -300,11 +333,23 @@
             >
               <div class="row contact-info">
                 <div class="input-field col s6">
-                  <input id="name" name="name" type="text" class="validate" required />
+                  <input
+                    id="name"
+                    name="name"
+                    type="text"
+                    class="validate"
+                    required
+                  />
                   <label for="name">Name</label>
                 </div>
                 <div class="input-field col s6">
-                  <input id="email" name="email" type="email" class="validate" required />
+                  <input
+                    id="email"
+                    name="email"
+                    type="email"
+                    class="validate"
+                    required
+                  />
                   <label for="email">Email</label>
                 </div>
                 <div class="row">
@@ -316,7 +361,9 @@
                       required
                     ></textarea>
                     <label id="messageWord" for="message">Message</label>
-                    <a href="mailto:ayla@aylaentrekin.com" target="_blank">Submit</a>
+                    <a href="mailto:ayla@aylaentrekin.com" target="_blank"
+                      >Submit</a
+                    >
                     <!-- <button class="submit" type="submit" value="submit">
                       Submit
                     </button> -->
@@ -342,14 +389,18 @@
     <script>
       AOS.init();
     </script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-      <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.4.2/firebase-app.js"></script>
-    
+
     <!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="/__/firebase/8.4.2/firebase-analytics.js"></script>
-    
+
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
   </body>
