updated about me

--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,10 @@
       <h1 data-aos="fade-up" data-aos-duration="2000">About Me</h1>
       <div class="about" data-aos="fade-up" data-aos-duration="2000">
         <p>
-          Hi, I'm Ayla Entrekin, a software developer with a passion for
-          building seamless and efficient software solutions. Currently, I am
-          contributing my skills and knowledge at Cognizant Technology
-          Solutions, where I engage in diverse projects with our client Dun and
-          Bradstreet.
+          Hi, I am a software developer with a passion for building seamless and
+          efficient software solutions. Currently, I am contributing my skills
+          and knowledge at Cognizant Technology Solutions, where I engage in
+          diverse projects with our client Dun and Bradstreet.
         </p>
         <p>
           With expertise in technologies such as Java/Spring Boot, Angular 11+,
