updated about me

--- a/public/index.html
+++ b/public/index.html
@@ -160,10 +160,8 @@
             <figcaption>
               <h6>Dun & Bradstreet</h6>
               <p>
-                The ultimate aquarium review site built with a MERN (Mongoose,
-                Express, React, Node) stack including Redux for state
-                management. This site also uses express validator for
-                authentication and some parallax effects for design.
+                Customer Service Portal used by customers and clients around the
+                world to request service and support on a variety of issues.
               </p>
             </figcaption>
             <a
